完成前台页面数据加载和功能实现（除文章详情外）

--- a/views/article_detail.jade
+++ b/views/article_detail.jade
@@ -2,8 +2,8 @@ extend layout
 
 block content 
     #article_detail-banner()
-        h4 文章标题
-        p 文章摘要
-        small 时间
+        h4 #{title}
+        p #{abstract}
+        small #{date}
 
     #article-board
