--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,9 +11,9 @@ html
       #topBar
         #topBarTitle timegogo
         nav#topBarLink.nav.justify-content-center.align-items-center
-          a.nav-link.active(aria-current="page" href="#") 首页
-          a.nav-link(href="#") 分类
-          a.nav-link(href="#") 照片
+          a.nav-link.active(aria-current="page" href="/") 首页
+          a.nav-link(href="/article") 分类
+          a.nav-link(href="/photos") 照片
           a.nav-link(href="#") 管理
 
       block content
