--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -165,6 +165,7 @@ body{
   position: relative;
   background: rgba(0,0,0,0.1);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 10;
