--- a/views/classifier.jade
+++ b/views/classifier.jade
@@ -2,32 +2,28 @@ extend layout
 
 block content 
     #classifier-banner
-        #classifier-banner-line
-            i.fa.fa-chevron-left.fa-2x
-            h5 读书笔记
-            i.fa.fa-chevron-right.fa-2x
+        if(!empty)
+            #classifier-banner-line
+                a(href="/article/prev/"+classifier.classifier)
+                    i.fa.fa-chevron-left.fa-2x
+                h5 #{classifier.classifier}
+                a(href="/article/next/"+classifier.classifier)
+                    i.fa.fa-chevron-right.fa-2x
+            small.text-center.text-white.my-2 #{classifier.number} 篇
 
     #classifier-board
         ul.list-unstyled 
-            li.my-3
-                .card.p-2
-                    .row 
-                        .col-4 
-                            img(src="/images/article/default.jpg" alt="")
-                        .col-8 
-                            .card-body
-                                h5.card-title 水调歌头·明月几时有
-                                p.card-text 明月几时有？把酒问青天。不知天上宫阙，今夕是何年。我欲乘风归去，又恐琼楼玉宇，高处不胜寒。起舞弄清影，何似在人间。
-                                p.card-text
-                                    small.text-muted 苏轼 〔宋代〕
-            li
-                .card.p-2
-                    .row 
-                        .col-4 
-                            img(src="/images/article/default.jpg" alt="")
-                        .col-8 
-                            .card-body
-                                h5.card-title 水调歌头·明月几时有
-                                p.card-text 明月几时有？把酒问青天。不知天上宫阙，今夕是何年。我欲乘风归去，又恐琼楼玉宇，高处不胜寒。起舞弄清影，何似在人间。
-                                p.card-text
-                                    small.text-muted 苏轼 〔宋代〕
+            each item in articles
+                li.my-3
+                    .card.p-2
+                        .row 
+                            .col-4 
+                                a(href="/article/"+item._id)
+                                    img(src=item.picture alt="")
+                            .col-8 
+                                .card-body
+                                    h5.card-title #{item.title}
+                                    p.card-text #{item.content}
+                                    p.card-text
+                                        small.text-muted #{item.date}
+
