--- a/views/photo_detail.jade
+++ b/views/photo_detail.jade
@@ -8,8 +8,8 @@ html
   body
     .container-fluid
       #photo-detail
-        img.card-img(src="/images/photos/default.jpg", alt="")
+        img.card-img(src=photo.file, alt="")
         #photo-detail-content
-            h5.card-title title 
-            p.card-text This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-            p.card-text Last updated 3 mins ago
+            h5.card-title #{photo.title}
+            p.card-text #{photo.description}
+            p.card-text #{photo.date}
