--- a/views/photos.jade
+++ b/views/photos.jade
@@ -2,22 +2,15 @@ extend layout
 
 block content 
     #carouselExampleCaptions.carousel.slide(data-bs-ride="carousel")
-        .carousel-inner 
-            .carousel-item.active   
-                img.d-block.w-100(src="/images/article/default.jpg", alt="")
-                .carousel-caption.d-none.d-md-block 
-                    h5 第一张照片
-                    p Some representative placeholder content for the first slide.
-            .carousel-item
-                img.d-block.w-100(src="/images/article/default.jpg", alt="")
-                .carousel-caption.d-none.d-md-block 
-                    h5 第二张照片
-                    p Some representative placeholder content for the first slide.
-            .carousel-item
-                img.d-block.w-100(src="/images/article/default.jpg", alt="")
-                .carousel-caption.d-none.d-md-block 
-                    h5 第三张照片
-                    p Some representative placeholder content for the first slide.
+        .carousel-inner
+            ul.list-unstyled 
+                each item in photos
+                    li 
+                        .carousel-item.active   
+                            img.d-block.w-100(src=item.file, alt="")
+                            .carousel-caption.d-none.d-md-block 
+                                h5 #{item.title}
+                                p #{item.description}
         button.carousel-control-prev(type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev")
             span.carousel-control-prev-icon(aria-hidden="true")
         button.carousel-control-next(type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next")
@@ -27,34 +20,13 @@ block content
         h4.text-center ---- 最 新 照 片 ----
 
     #photos-list.row.row-cols-3.g-4
-        .col 
-            .card 
-                img.card-img-top(src="/images/article/default.jpg" alt="")
-                .card-body 
-                    h5.card-title title 
-                    p.card-text  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-        .col 
-            .card 
-                img.card-img-top(src="/images/article/default.jpg" alt="")
-                .card-body 
-                    h5.card-title title 
-                    p.card-text  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-        .col 
-            .card 
-                img.card-img-top(src="/images/article/default.jpg" alt="")
-                .card-body 
-                    h5.card-title title 
-                    p.card-text  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-        .col 
-            .card 
-                img.card-img-top(src="/images/article/default.jpg" alt="")
-                .card-body 
-                    h5.card-title title 
-                    p.card-text  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
-        .col 
-            .card 
-                img.card-img-top(src="/images/article/default.jpg" alt="")
-                .card-body 
-                    h5.card-title title 
-                    p.card-text  This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.         
-        
+        ul.list-unstyled 
+            each item in photos
+                li
+                    .col 
+                        .card
+                            a(href="/photos/"+item._id, target="_blank") 
+                                img.card-img-top(src=item.file alt="")
+                            .card-body 
+                                h5.card-title #{item.title}
+                                p.card-text  #{item.description}
